# mysetup

./: README.md  basicwingetapps.json  choco_all.json  chocopackages.config  pyproject.toml  python_versions.txt  vscodeextensions.txt  winget_all.json  winget_basic.json  wingetapps.json
mysetup/: __init__.py  __main__.py  cli.py
