[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
name = "mysetup"
authors = [
    {name = "Morten Engen", email = "mort1eng1@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8,<3.13"
dynamic = ["version", "description"]
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
mys = "mysetup.cli:app"

[tool.black]
line-length = 79
skip-string-normalization = "True"
